Problem18/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_45\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Sam\Desktop\Problem18
-d
C:\Users\Sam\Desktop\Problem18\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Sam\Desktop\Problem18\Problem18.java
<---- end of javadoc command ---->
Loading source file C:\Users\Sam\Desktop\Problem18\Problem18.java...
C:\Users\Sam\Desktop\Problem18\Problem18.java:53: error: illegal start of expression
                    System.out.print(list[i][]);
                                             ^
1 error
